@@ -1,3 +1,10 @@
+2002-07-10  Marco Walther  <Marco.Walther@sun.com>
+
+	* elf.c: (assign_section_numbers) Set sh_entsize for .stab only
+	when not already set.
+	* elf64-sparc.c: (sparc64_elf_fake_sections): New function.
+	(elf_backend_fake_sections): Define.
+
 2002-07-10  Alan Modra  <amodra@bigpond.net.au>
 
 	* merge.c (_bfd_merge_section): Remove redundant output_section check.
